# exp_director_task

./: .gitignore  CMakeLists.txt  README.md  package.xml
dt_actions_emulation/: CMakeLists.txt  Readme.md  package.xml
dt_actions_emulation/include/: Action.h  ActionFileReader.h  Menu.h  Parameters.h
dt_actions_emulation/src/: ActionFileReader.cpp  Menu.cpp  main.cpp
dt_actions_emulation/test_files/: actions.xml
dt_head_gestures/: CMakeLists.txt  README.md  package.xml
dt_head_gestures/action/: HeadScan.action
dt_head_gestures/launch/: dt_head_gestures.launch
dt_head_gestures/src/: head_scan_node.cpp
dt_head_gestures/srv/: HeadScan.srv
dt_navigation/: CMakeLists.txt  README.md  package.xml
dt_navigation/action/: Move.action
dt_navigation/launch/: pr2_dt_nav.launch
dt_navigation/src/: strafing_node.cpp
dt_resources/: Readme.md
dt_resources/configs/: overworld.yaml  overworld_pepper.yaml
dt_resources/launch/: ar_track_alvar_robot.launch  didine_ontologenius_mementar_multi.launch  ontologenius_mementar.launch  ontologenius_mementar_multi.launch  ontology_init.launch  ontology_setup1.launch  ontology_setup1_nl.launch  ontology_setup2_multi.launch  overworld.launch  overworld_pepper.launch  static_transform_pr2.launch
dt_resources/mesh/: ikea_low_table_lack.dae  round_table.dae  table.stl  throw_box_pink.dae  throw_box_pink.stl
dt_resources/mesh/boxes/: box_C3.mtl
dt_resources/mesh/furnitures/: ikea_kallax.dae
dt_resources/ontologies/: actions_emulation.owl  block_building_objects.owl  coffee_actions.owl  common_ground.owl  didine_objects.owl  dt_actions.owl  dt_humans.owl  dt_objects.owl  dt_objects_base.owl  dt_setup_1.owl  dt_setup_2.owl  effects_human.owl  effects_robot.owl
dt_resources/ontologies/common_ground/: CG_agents.owl  CG_area.owl  CG_building.owl  CG_context.owl  CG_entities.owl  CG_env_interaction.owl  CG_geometric.owl  CG_objects.owl
dt_resources/scripts/: scan.sh
dt_resources/tags/: MarkerData_54.xml  table.xml  table_1.xml  table_2.xml  table_3.xml  throw_box_pink.xml
launch/: ar_track_alvar_robot.launch  ontology_init.launch  ontology_setup1.launch  ontology_setup1_nl.launch  ontology_setup2_multi.launch  perception_tags.launch  tag_service.launch
mesh/: dt_box.dae  dt_box_back.dae  dt_box_back.stl  dt_cube.dae  dt_cube.stl  ikea_console.dae  ikea_console.stl
ontologies/: common_ground.owl  dt_objects.owl  dt_objects_base.owl  dt_setup_1.owl  dt_setup_2.owl
script/: ar_perception_node.py
scripts/: ar_perception_node.py  tag_service_node.py
tags/: MarkerData_100.xml  MarkerData_101.xml  MarkerData_102.xml  MarkerData_104.xml  MarkerData_206.xml  MarkerData_230.xml  MarkerData_54.xml
