<?xml version="1.0"?>
<package format="2">
  <name>dt_actions_emulation</name>
  <version>0.0.0</version>
  <description>The dt_actions_emulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gsarthou@laas.fr">gsarthou</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ontologenius</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>ontologenius</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>ontologenius</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tinyxml</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
